--- a/https-simulation/Properties/launchSettings.json
+++ b/https-simulation/Properties/launchSettings.json
@@ -1,8 +1,7 @@
 {
   "profiles": {
     "https-simulation": {
-      "commandName": "Project",
-      "commandLineArgs": "1"
+      "commandName": "Project"
     }
   }
 }
