--- a/https-simulation/Properties/launchSettings.json
+++ b/https-simulation/Properties/launchSettings.json
@@ -1,7 +1,8 @@
 {
   "profiles": {
     "https-simulation": {
-      "commandName": "Project"
+      "commandName": "Project",
+      "commandLineArgs": "2"
     }
   }
 }
